@@ -5,7 +5,6 @@ import io.github.tasoula.intershop.dto.ProductDto;
 import io.github.tasoula.intershop.model.CartItem;
 import io.github.tasoula.intershop.model.Product;
 import io.github.tasoula.intershop.exceptions.ResourceNotFoundException;
-import io.github.tasoula.intershop.dao.ProductRepository;
 import io.github.tasoula.intershop.model.User;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -16,196 +15,157 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.*;
 import org.springframework.http.codec.multipart.FilePart;
-import org.springframework.mock.web.MockMultipartFile;
-import org.springframework.web.multipart.MultipartFile;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
-import java.io.IOException;
 import java.math.BigDecimal;
 import java.util.*;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(MockitoExtension.class)
+ @ExtendWith(MockitoExtension.class)
 public class ProductServiceTest {
 
     @Mock
-    private ProductRepository productRepository;
+    private ProductDataService productDataService;
+
     @Mock
     private CartService cartService;
-    @Mock
-    private ImageService imageService;
+
     @InjectMocks
     private ProductService productService;
 
     private UUID userId;
-    private User user;
     private UUID productId;
     private Product product;
-    private CartItem cartItem;
+    private Pageable pageable;
 
     @BeforeEach
     void setUp() {
         userId = UUID.randomUUID();
-        user = new User();
-        user.setId(userId);
-
         productId = UUID.randomUUID();
         product = new Product();
         product.setId(productId);
         product.setTitle("Test Product");
         product.setDescription("Test Description");
-        product.setPrice(BigDecimal.valueOf(10.0));
-        product.setStockQuantity(100);
-
-        cartItem = new CartItem();
-        cartItem.setUserId(user.getId());
-        cartItem.setProductId(product.getId());
-        cartItem.setQuantity(5);
+        product.setPrice(BigDecimal.TEN);
+        product.setStockQuantity(10);
+        pageable = PageRequest.of(0, 10);
     }
 
     @Test
-    void findAll_WithSearchTerm_ReturnsProductDtoPage() {
-        String search = "test";
-        Pageable pageable = PageRequest.of(0, 10);
-        List<Product> products = Collections.singletonList(product);
-        Page<Product> productPage = new PageImpl<>(products, pageable, 1);
+    void findAll_shouldReturnPageOfProductDto() {
+        // Arrange
+        String search = "Test";
+        List<Product> products = List.of(product);
+        Flux<Product> productFlux = Flux.fromIterable(products);
+        when(productDataService.findAll(search, pageable)).thenReturn(productFlux);
+        when(productDataService.count()).thenReturn(Mono.just(1L));
+        when(cartService.getCartQuantity(userId, productId)).thenReturn(Mono.just(2));
 
-        when(productRepository.findByTitleContainingOrDescriptionContainingIgnoreCaseAndStockQuantityGreaterThan(
-                search.toLowerCase(), search.toLowerCase(), 0, pageable))
-                .thenReturn(Flux.fromIterable(products));
-        when(cartService.getCartQuantity(userId, productId)).thenReturn(Mono.just(cartItem.getQuantity()));
-        when(productRepository.count()).thenReturn(Mono.just((long) products.size()));
-
+        // Act
         Mono<Page<ProductDto>> result = productService.findAll(userId, search, pageable);
 
+        // Assert
         StepVerifier.create(result)
                 .assertNext(page -> {
-                    List<ProductDto> content = page.getContent();
-                    assert content.size() == products.size();
-                    ProductDto dto = content.getFirst();
-                    assert dto.getTitle().equals(products.getFirst().getTitle());
-                    assert dto.getQuantity() == cartItem.getQuantity();
+                    assertEquals(1, page.getContent().size());
+                    assertEquals("Test Product", page.getContent().get(0).getTitle());
+                    assertEquals(2, page.getContent().get(0).getQuantity());
+                    assertEquals(1, page.getTotalElements());
                 })
                 .verifyComplete();
 
-        verify(productRepository).findByTitleContainingOrDescriptionContainingIgnoreCaseAndStockQuantityGreaterThan(
-                eq(search.toLowerCase()), eq(search.toLowerCase()), eq(0), any(Pageable.class));
-        verify(cartService).getCartQuantity(userId, products.getFirst().getId());
-        verify(productRepository).count();
-    }
-
-    @Test
-    void findAll_WithoutSearchTerm_ReturnsProductDtoPage() {
-        Pageable pageable = PageRequest.of(0, 10);
-        List<Product> products = Collections.singletonList(product);
-        Page<Product> productPage = new PageImpl<>(products, pageable, 1);
-
-        when(productRepository.findByStockQuantityGreaterThan(0, pageable)).thenReturn(Flux.fromIterable(products));
-        when(cartService.getCartQuantity(userId, productId)).thenReturn(Mono.just(cartItem.getQuantity()));
-        when(productRepository.count()).thenReturn(Mono.just((long) products.size()));
-
-        Mono<Page<ProductDto>> result = productService.findAll(userId, null, pageable);
-
-        StepVerifier.create(result)
-                .assertNext(page -> {
-                    List<ProductDto> content = page.getContent();
-                    assert content.size() == products.size();
-                    ProductDto dto = content.getFirst();
-                    assert dto.getTitle().equals(products.getFirst().getTitle());
-                    assert dto.getQuantity() == cartItem.getQuantity();
-                })
-                .verifyComplete();
-
-        verify(productRepository).findByStockQuantityGreaterThan(0, pageable);
-        verify(cartService).getCartQuantity(userId, products.getFirst().getId());
-        verify(productRepository).count();
-    }
-
- @Test
-    void findById_ProductExists_ReturnsProductDto() throws ResourceNotFoundException {
-        when(productRepository.findById(productId)).thenReturn(Mono.just(product));
-        when(cartService.getCartQuantity(userId, productId)).thenReturn(Mono.just(cartItem.getQuantity()));
-
-        Mono<ProductDto> result = productService.findById(userId, productId);
-
-
-     StepVerifier.create(result)
-             .assertNext(dto -> {
-                 assert dto.getId().equals(productId);
-                 assert dto.getTitle().equals(product.getTitle());
-                 assert dto.getQuantity() == cartItem.getQuantity();
-             })
-             .verifyComplete();
-
-        verify(productRepository).findById(productId);
+        verify(productDataService).findAll(search, pageable);
+        verify(productDataService).count();
         verify(cartService).getCartQuantity(userId, productId);
     }
 
-       @Test
-    void findById_ProductDoesNotExist_ThrowsResourceNotFoundException() {
-        when(productRepository.findById(productId)).thenReturn(Mono.empty());
+    @Test
+    void findById_shouldReturnProductDto() {
+        // Arrange
+        when(productDataService.findById(productId)).thenReturn(Mono.just(product));
+        when(cartService.getCartQuantity(userId, productId)).thenReturn(Mono.just(2));
 
+        // Act
         Mono<ProductDto> result = productService.findById(userId, productId);
 
-           StepVerifier.create(result)
-                   .expectErrorMatches(throwable -> throwable instanceof ResourceNotFoundException &&
-                           throwable.getMessage().contains(productId.toString()))
-                   .verify();
-        verify(productRepository).findById(productId);
+        // Assert
+        StepVerifier.create(result)
+                .assertNext(dto -> {
+                    assertEquals("Test Product", dto.getTitle());
+                    assertEquals(2, dto.getQuantity());
+                })
+                .verifyComplete();
+
+        verify(productDataService).findById(productId);
+        verify(cartService).getCartQuantity(userId, productId);
+    }
+
+    @Test
+    void findById_shouldReturnError_whenProductNotFound() {
+        // Arrange
+        when(productDataService.findById(productId)).thenReturn(Mono.empty());
+
+        // Act
+        Mono<ProductDto> result = productService.findById(userId, productId);
+
+        // Assert
+        StepVerifier.create(result)
+                .expectError(ResourceNotFoundException.class)
+                .verify();
+
+        verify(productDataService).findById(productId);
         verifyNoInteractions(cartService);
     }
 
     @Test
-    void createProduct_savesProductAndImage() {
-        ProductDto productDto = new ProductDto();
-        productDto.setTitle("New Product");
-        productDto.setDescription("Description");
-        productDto.setPrice(BigDecimal.valueOf(100));
-        productDto.setStockQuantity(10);
-
+    void createProduct_shouldCreateProductSuccessfully() {
+        // Arrange
         FilePart image = mock(FilePart.class);
-        when(image.filename()).thenReturn("image.png");
+        when(image.filename()).thenReturn("test.jpg");
+        when(productDataService.createProduct(any(Product.class), eq(image))).thenReturn(Mono.empty());
+        ProductDto newProductDto = new ProductDto();
+        newProductDto.setTitle("New Product");
+        newProductDto.setDescription("New Description");
+        newProductDto.setPrice(BigDecimal.valueOf(20));
+        newProductDto.setStockQuantity(20);
 
-        ArgumentCaptor<Product> productCaptor = ArgumentCaptor.forClass(Product.class);
+        // Act
+        Mono<Void> result = productService.createProduct(newProductDto, image);
 
-        Product savedProduct = new Product();
-        savedProduct.setId(UUID.randomUUID());
-        savedProduct.setTitle(productDto.getTitle());
-        savedProduct.setDescription(productDto.getDescription());
-        savedProduct.setPrice(productDto.getPrice());
-        savedProduct.setStockQuantity(productDto.getStockQuantity());
-        savedProduct.setImgPath("some_filename.png");
+        // Assert
+        StepVerifier.create(result).verifyComplete();
 
-        // Мокаем сохранение продукта, возвращаем savedProduct
-        when(productRepository.save(any(Product.class))).thenAnswer(invocation -> {
-            Product p = invocation.getArgument(0);
-            p.setId(savedProduct.getId()); // эмулируем установку id после сохранения
-            return Mono.just(p);
-        });
+        verify(productDataService).createProduct(any(Product.class), eq(image));
+    }
 
-        // Мокаем сохранение изображения
-        when(imageService.saveToDisc(any(FilePart.class), anyString())).thenReturn(Mono.empty());
+    @Test
+    void createProduct_verifiesFieldsAreCopiedCorrectly() {
+        // Arrange
+        FilePart image = mock(FilePart.class);
+        when(image.filename()).thenReturn("test.jpg");
+        when(productDataService.createProduct(any(Product.class), eq(image))).thenReturn(Mono.empty());
+        ProductDto newProductDto = new ProductDto();
+        newProductDto.setTitle("New Product");
+        newProductDto.setDescription("New Description");
+        newProductDto.setPrice(BigDecimal.valueOf(20));
+        newProductDto.setStockQuantity(20);
 
-        Mono<Void> result = productService.createProduct(productDto, image);
+        // Act
+        productService.createProduct(newProductDto, image).subscribe(); // Subscribe to trigger the method call
 
-        StepVerifier.create(result)
-                .verifyComplete();
-
-        verify(productRepository).save(productCaptor.capture());
-        Product productToSave = productCaptor.getValue();
-
-        // Проверяем, что поля установлены
-        assert productToSave.getTitle().equals(productDto.getTitle());
-        assert productToSave.getDescription().equals(productDto.getDescription());
-        assert productToSave.getPrice().equals(productDto.getPrice());
-        assert productToSave.getStockQuantity() == productDto.getStockQuantity();
-        assert productToSave.getImgPath() != null && productToSave.getImgPath().contains("image.png");
-
-        verify(imageService).saveToDisc(eq(image), eq(productToSave.getImgPath()));
+        // Assert
+        verify(productDataService).createProduct(argThat(product ->
+                        product.getTitle().equals("New Product") &&
+                                product.getDescription().equals("New Description") &&
+                                product.getPrice().equals(BigDecimal.valueOf(20)) &&
+                                product.getStockQuantity() == 20 &&
+                                product.getImgPath().startsWith("")),
+                eq(image));
     }
 
 }
+
